--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/*@tailwind base;*/
+/*@tailwind components;*/
+/*@tailwind utilities;*/
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -24,4 +19,12 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+input[type="text"] {
+  background-color: rgba(var(--foreground-rgb), 0.1);
+  color: rgb(var(--foreground-rgb));
+  border: 2px solid #f0f0f0;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
 }
