--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,10 +21,35 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-input[type="text"] {
-  background-color: rgba(var(--foreground-rgb), 0.1);
-  color: rgb(var(--foreground-rgb));
-  border: 2px solid #f0f0f0;
-  border-radius: 0.25rem;
-  padding: 0.5rem;
+input, textarea, select, button {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
 }
+
+input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="tel"], input[type="date"], input[type="datetime-local"], input[type="month"], input[type="search"], input[type="time"], input[type="url"], textarea, select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-color: currentColor;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 0.375rem;
+  padding-top: 0.5rem;
+  padding-right: 0.75rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  line-height: 1.25;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.bg-blueish{
+  background-color: rgba(169, 203, 255, 0.67);
+  --bs-bg-opacity: 0.67;
+}
+
+.text-red {
+  color: #e53e3e;
+}
+
